# smiles2iupac

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  naming-issue.yml
.github/workflows/: ci.yml  deploy-hf.yml  healthcheck.yml
app/: api.py  gradio_app.py
deploy/: README.md
docs/: ACCURACY.md
notebooks/: benchmarking.ipynb
scripts/: build_accuracy_dataset.py  record_pubchem_cassettes.py
src/smiles2iupac/: __init__.py  cache.py  cli.py  confidence.py  enrich.py  mcp_server.py  opsin_check.py  pipeline.py  pubchem.py  result.py  stout_engine.py  validator.py  validator_strict.py
tests/: _accuracy.py  conftest.py  test_accuracy_offline.py  test_accuracy_scorer.py  test_api.py  test_cache.py  test_concurrency.py  test_enrich.py  test_lookup.py  test_mcp_server.py  test_opsin_check.py  test_pipeline.py  test_result.py  test_stout_engine.py  test_validator.py  test_validator_strict.py
tests/fixtures/: accuracy_baseline.json  accuracy_dataset.csv  known_molecules.csv  pubchem_cassettes.json
